# roco_egg_master

./: .gitignore  README.md  compress-images.js  copy-images.js  github_management_guide.md  index.html  metadata.json  notes.md  package-lock.json  package.json  task_plan.md  test_clean.ts  vite.config.ts
.claude/: PROJECT_KNOWLEDGE.md
data/: roco_egg_data.json
electron/: main.cjs  preload.cjs
images/: 全图鉴.json  洛克王国_蛋组精灵表.json
images/蛋数据/: PET_EGG_CONF.json  大块头小不点json转换.py  大块头蛋数据（含蛋组）-大块头自记.csv  精灵名字映射表.json  蛋数据.json
src/: App.tsx  index.css  petHelper.ts  pinyin.ts  sprite_files.json  types.ts
src/components/: Autocomplete.tsx  EggCard.tsx  ParentCard.tsx  SortableCard.tsx  SortableRow.tsx
爬取/rocom-data/: .env.example  .gitignore  README.md  battle.py  db_manage.py  requirements.txt  run.bat  train.py  viewer.py
爬取/rocom-data/data/: llm_config.yaml.example  skills.csv  skills_all.csv  sprites.csv  teams.json  urls.csv
爬取/rocom-data/game_control/: __init__.py  controller.py  exceptions.py  logger.py  skill_executor.py  utils.py  window.py
爬取/rocom-data/import_images/: README.txt
爬取/rocom-data/pvp/: config.py  pvp_task.py
爬取/rocom-data/sim/: __init__.py  ability_engine.py  agent_base.py  batch_concurrent.py  battle_engine.py  battle_log_capture.py  battle_state.py  counter_system.py  damage_calc.py  data_store.py  lineups_loader.py  llm_review.py  mark_system.py  mcts.py  mcts_agent.py  pokemon.py  pokemon_db.py  skill.py  skill_db.py  types.py  (+6 more)
爬取/rocom-data/win_util/: README.md  __init__.py  controller.py  image.py  keyboard.py  mouse.py  pyproject.toml
(+14 files in other folders)
